force-app/main/default/objects/RTL_Referral__c/RTL_Referral__c.object-meta.xml
<CustomObject>
    <label>Referral</label>
    <nameField>
        <displayFormat>REF-{YY}{MM}{DD}-{000}</displayFormat>
        <label>Referral ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>