force-app/main/default/objects/RTL_Referral__c/fields/Assigned_Pool__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Pool__c</fullName>
    <label>Assigned Pool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRANCH</fullName>
            </value>
            <value>
                <fullName>OUTBOUND</fullName>
            </value>
            <value>
                <fullName>RMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>