force-app/main/default/objects/RTL_Referral__c/fields/Before_Over_SLA__c.field-meta.xml
<CustomField>
    <fullName>Before_Over_SLA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Before Over SLA</label>
    <type>DateTime</type>
</CustomField>