force-app/main/default/objects/RTL_Referral__c/fields/Call_Me_Now_Interested_Product__c.field-meta.xml
<CustomField>
    <fullName>Call_Me_Now_Interested_Product__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Me Now Interested Product</label>
    <length>40</length>
    <type>Text</type>
</CustomField>