force-app/main/default/objects/RTL_Referral__c/fields/Call_Me_Now_URL__c.field-meta.xml
<CustomField>
    <fullName>Call_Me_Now_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Me Now URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>