force-app/main/default/objects/RTL_Referral__c/fields/Campaign_Reference_Source__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Reference_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Reference Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>