force-app/main/default/objects/RTL_Referral__c/fields/CheckClickSubmit__c.field-meta.xml
<CustomField>
    <fullName>CheckClickSubmit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckClickSubmit</label>
    <type>Checkbox</type>
</CustomField>