force-app/main/default/objects/RTL_Referral__c/fields/COM_Complete_Code__c.field-meta.xml
<CustomField>
    <fullName>COM_Complete_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Complete Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>