force-app/main/default/objects/RTL_Referral__c/fields/Contact_FullName__c.field-meta.xml
<CustomField>
    <fullName>Contact_FullName__c</fullName>
    <formula>RTL_FirstName__c&amp;&apos; &apos;&amp;RTL_LastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact FullName</label>
    <type>Text</type>
</CustomField>