force-app/main/default/objects/RTL_Referral__c/fields/Corebank_Emp_Id__c.field-meta.xml
<CustomField>
    <fullName>Corebank_Emp_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>