force-app/main/default/objects/RTL_Referral__c/fields/countsendHPAP__c.field-meta.xml
<CustomField>
    <fullName>countsendHPAP__c</fullName>
    <defaultValue>0</defaultValue>
    <label>countsendHPAP</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>