force-app/main/default/objects/RTL_Referral__c/fields/Created_by_Chief__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Chief__c</fullName>
    <formula>CreatedBy.Chief__c +&quot; - &quot;+ Owner:User.Chief__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Chief</label>
    <type>Text</type>
</CustomField>