force-app/main/default/objects/RTL_Referral__c/fields/FNA_Activity__c.field-meta.xml
<CustomField>
    <fullName>FNA_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FNA Activity</label>
    <referenceTo>FNA_Activity__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>