force-app/main/default/objects/RTL_Referral__c/fields/FNA_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>FNA_Product_Name__c</fullName>
    <description>For keep FNA product name (Interested product)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FNA Product Name</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>