force-app/main/default/objects/RTL_Referral__c/fields/HPAP_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>HPAP_Reason_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HPAP Reason Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>