force-app/main/default/objects/RTL_Referral__c/fields/Is_Flagship__c.field-meta.xml
<CustomField>
    <fullName>Is_Flagship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is_Flagship Use for stamp referral created by BR flagship</description>
    <label>Is_Flagship</label>
    <type>Checkbox</type>
</CustomField>