force-app/main/default/objects/RTL_Referral__c/fields/Is_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Is_Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For send email when click button reassign</description>
    <label>Is Send Email</label>
    <type>Checkbox</type>
</CustomField>