force-app/main/default/objects/RTL_Referral__c/fields/Is_Send_to_HPAP_Done__c.field-meta.xml
<CustomField>
    <fullName>Is_Send_to_HPAP_Done__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Send to HPAP Done</label>
    <type>Checkbox</type>
</CustomField>