force-app/main/default/objects/RTL_Referral__c/fields/Is_Transfer_Page__c.field-meta.xml
<CustomField>
    <fullName>Is_Transfer_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set this flag to true to tell system that transaction is made from Transfer to Branch Page</description>
    <label>Is Transfer Page</label>
    <type>Checkbox</type>
</CustomField>