force-app/main/default/objects/RTL_Referral__c/fields/Is_Update_Refer__c.field-meta.xml
<CustomField>
    <fullName>Is_Update_Refer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Update Refer</label>
    <type>Checkbox</type>
</CustomField>