force-app/main/default/objects/RTL_Referral__c/fields/LGS_Child_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>LGS_Child_Campaign_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LGS Child Campaign ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>