force-app/main/default/objects/RTL_Referral__c/fields/LGS_File_Upload__c.field-meta.xml
<CustomField>
    <fullName>LGS_File_Upload__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>File Upload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>