force-app/main/default/objects/RTL_Referral__c/fields/LGS_VIN_No__c.field-meta.xml
<CustomField>
    <fullName>LGS_VIN_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VIN No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>