force-app/main/default/objects/RTL_Referral__c/fields/Owner_Emp_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_Emp_ID__c</fullName>
    <formula>Owner:User.Employee_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Emp ID</label>
    <type>Text</type>
</CustomField>