force-app/main/default/objects/RTL_Referral__c/fields/Referral_Over_SLA__c.field-meta.xml
<CustomField>
    <fullName>Referral_Over_SLA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Over SLA</label>
    <type>DateTime</type>
</CustomField>