force-app/main/default/objects/RTL_Referral__c/fields/RTL_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>