force-app/main/default/objects/RTL_Referral__c/fields/RTL_Account_No__c.field-meta.xml
<CustomField>
    <fullName>RTL_Account_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HP Account No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>