force-app/main/default/objects/RTL_Referral__c/fields/RTL_Aging__c.field-meta.xml
<CustomField>
    <fullName>RTL_Aging__c</fullName>
    <formula>CASE(MOD( RTL_Referred_Date__c - DATE(1985,6,24),7), 
1 , CASE( MOD( TODAY()-RTL_Referred_Date__c ,7),1,1,2,2,3,3,4,3,5,3,6,4,0), 
2 , CASE( MOD( TODAY()-RTL_Referred_Date__c ,7),1,1,2,2,3,2,4,2,5,3,6,4,0), 
3 , CASE( MOD( TODAY()-RTL_Referred_Date__c ,7),1,1,2,1,3,1,4,2,5,3,6,4,0), 
4 , CASE( MOD( TODAY()-RTL_Referred_Date__c ,7),1,0,2,0,3,1,4,2,5,3,6,4,0), 
5 , CASE( MOD( TODAY()-RTL_Referred_Date__c ,7),1,0,2,0,3,1,4,2,5,3,6,4,0), 
6 , CASE( MOD( TODAY()-RTL_Referred_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,4,0), 
CASE( MOD( TODAY()-RTL_Referred_Date__c ,7),1,1,2,2,3,3,4,4,5,4,6,4,0)) 
+ 
(FLOOR(( TODAY()-RTL_Referred_Date__c )/7)*5)</formula>
    <label>Refer Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>