force-app/main/default/objects/RTL_Referral__c/fields/RTL_AL_available_time__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_available_time__c</fullName>
    <label>Available time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ตลอดเวลาทำการ</fullName>
            </value>
            <value>
                <fullName>9:00 - 12:00 น.</fullName>
            </value>
            <value>
                <fullName>12:01-13:00 น.</fullName>
            </value>
            <value>
                <fullName>13:01-17:00 น.</fullName>
            </value>
            <value>
                <fullName>17:01-19:00 น.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>