force-app/main/default/objects/RTL_Referral__c/fields/RTL_AL_BlueBook__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_BlueBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blue Book Code</label>
    <referenceTo>RTL_AL_BlueBook__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>