force-app/main/default/objects/RTL_Referral__c/fields/RTL_AL_car_plate_no__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_car_plate_no__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Car plate no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>