force-app/main/default/objects/RTL_Referral__c/fields/RTL_AL_car_subtype__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_car_subtype__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Car subtype</label>
    <length>150</length>
    <type>Text</type>
</CustomField>