force-app/main/default/objects/RTL_Referral__c/fields/RTL_AL_car_year__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_car_year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Car year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>