force-app/main/default/objects/RTL_Referral__c/fields/RTL_AL_CarBooked__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_CarBooked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CarBooked</label>
    <type>Checkbox</type>
</CustomField>