force-app/main/default/objects/RTL_Referral__c/fields/RTL_AL_contact_channel__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_contact_channel__c</fullName>
    <inlineHelpText>DS: ให้เจ้าหน้าที่ติดต่อให้บริการตามที่อยู่ (Delivery Service)
BR: สะดวกเข้ารับบริการที่ธนาคารธนชาต</inlineHelpText>
    <label>Contact channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>