force-app/main/default/objects/RTL_Referral__c/fields/RTL_AL_DownPercent__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_DownPercent__c</fullName>
    <label>DownPercent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>