force-app/main/default/objects/RTL_Referral__c/fields/RTL_AL_installment_amount__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_installment_amount__c</fullName>
    <label>Installment amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>