force-app/main/default/objects/RTL_Referral__c/fields/RTL_AL_Interested_Rate__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_Interested_Rate__c</fullName>
    <label>Interested Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>