force-app/main/default/objects/RTL_Referral__c/fields/RTL_AL_normal_price__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_normal_price__c</fullName>
    <label>Normal price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>