force-app/main/default/objects/RTL_Referral__c/fields/RTL_AL_PayPerMonth__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_PayPerMonth__c</fullName>
    <label>PayPerMonth</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>