force-app/main/default/objects/RTL_Referral__c/fields/RTL_AL_province_car_plate_no__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_province_car_plate_no__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Province Car Plate No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>