force-app/main/default/objects/RTL_Referral__c/fields/RTL_AL_Refer_No__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_Refer_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refer App No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>