force-app/main/default/objects/RTL_Referral__c/fields/RTL_AL_REMN_MTH__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_REMN_MTH__c</fullName>
    <label>REMN_MTH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>