force-app/main/default/objects/RTL_Referral__c/fields/RTL_AL_Req_No2__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_Req_No2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>req_no2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>