force-app/main/default/objects/RTL_Referral__c/fields/RTL_AL_Showroom__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_Showroom__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Showroom</label>
    <length>100</length>
    <type>Text</type>
</CustomField>