force-app/main/default/objects/RTL_Referral__c/fields/RTL_Branch__c.field-meta.xml
<CustomField>
    <fullName>RTL_Branch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referred by Branch / Team Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>