force-app/main/default/objects/RTL_Referral__c/fields/RTL_Call_Me_Now_Request_Count__c.field-meta.xml
<CustomField>
    <fullName>RTL_Call_Me_Now_Request_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Call Me Now Request Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>