force-app/main/default/objects/RTL_Referral__c/fields/RTL_Call_Me_Now_Response__c.field-meta.xml
<CustomField>
    <fullName>RTL_Call_Me_Now_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Me Now Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>