force-app/main/default/objects/RTL_Referral__c/fields/RTL_Call_Me_Now_Status__c.field-meta.xml
<CustomField>
    <fullName>RTL_Call_Me_Now_Status__c</fullName>
    <description>list of value : success , fail</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Me Now Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>