force-app/main/default/objects/RTL_Referral__c/fields/RTL_Campaign__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign__c</fullName>
    <description>used with integration to Telephony</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign</label>
    <length>40</length>
    <type>Text</type>
</CustomField>