force-app/main/default/objects/RTL_Referral__c/fields/RTL_Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Member__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Member</label>
    <length>40</length>
    <type>Text</type>
</CustomField>