force-app/main/default/objects/RTL_Referral__c/fields/RTL_Campaign_Reference__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Reference__c</fullName>
    <description>used in web to referral</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>