force-app/main/default/objects/RTL_Referral__c/fields/RTL_Channel_Segment__c.field-meta.xml
<CustomField>
    <fullName>RTL_Channel_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referred by Channel/Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>