force-app/main/default/objects/RTL_Referral__c/fields/RTL_Citizen_Id__c.field-meta.xml
<CustomField>
    <fullName>RTL_Citizen_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>