force-app/main/default/objects/RTL_Referral__c/fields/RTL_Closed_by_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Closed_by_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed by Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>