force-app/main/default/objects/RTL_Referral__c/fields/RTL_Closed_Date_Branch_Team_Name_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Closed_Date_Branch_Team_Name_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed Branch / Team Name (Code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>