force-app/main/default/objects/RTL_Referral__c/fields/RTL_Closed_Date_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Closed_Date_Region_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed Region Code / Group Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>