force-app/main/default/objects/RTL_Referral__c/fields/RTL_Closed_Date_Reporting_Segment__c.field-meta.xml
<CustomField>
    <fullName>RTL_Closed_Date_Reporting_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed Date Reporting Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>