force-app/main/default/objects/RTL_Referral__c/fields/RTL_Closed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>RTL_Closed_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed Date/time</label>
    <type>DateTime</type>
</CustomField>