force-app/main/default/objects/RTL_Referral__c/fields/RTL_Comment__c.field-meta.xml
<CustomField>
    <fullName>RTL_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>