force-app/main/default/objects/RTL_Referral__c/fields/RTL_Company__c.field-meta.xml
<CustomField>
    <fullName>RTL_Company__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>