force-app/main/default/objects/RTL_Referral__c/fields/RTL_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>RTL_Contact_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Address</label>
    <referenceTo>RTL_Contact_Address__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>