force-app/main/default/objects/RTL_Referral__c/fields/RTL_Count_Closed_Interest__c.field-meta.xml
<CustomField>
    <fullName>RTL_Count_Closed_Interest__c</fullName>
    <formula>IF(TEXT(RTL_Stage__c) = &quot;Closed (Interested)&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>#Closed Interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>