force-app/main/default/objects/RTL_Referral__c/fields/RTL_Count_Not_Contacted__c.field-meta.xml
<CustomField>
    <fullName>RTL_Count_Not_Contacted__c</fullName>
    <formula>IF(ISPICKVAL(RTL_Stage__c,&quot;New&quot; ),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>#Not Contacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>