force-app/main/default/objects/RTL_Referral__c/fields/RTL_Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>RTL_Customer_Segment__c</fullName>
    <description>used in web to referral</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Segment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>