force-app/main/default/objects/RTL_Referral__c/fields/RTL_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>RTL_Customer_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>