force-app/main/default/objects/RTL_Referral__c/fields/RTL_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Dealer_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>