force-app/main/default/objects/RTL_Referral__c/fields/RTL_Email__c.field-meta.xml
<CustomField>
    <fullName>RTL_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>