force-app/main/default/objects/RTL_Referral__c/fields/RTL_EMP_BR_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_EMP_BR_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EMP/BR Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>