force-app/main/default/objects/RTL_Referral__c/fields/RTL_Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Employee_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referred by Employee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>