force-app/main/default/objects/RTL_Referral__c/fields/RTL_EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>RTL_EmployeeID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referred by Employee ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>