force-app/main/default/objects/RTL_Referral__c/fields/RTL_Ext__c.field-meta.xml
<CustomField>
    <fullName>RTL_Ext__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ext</label>
    <type>Phone</type>
</CustomField>