force-app/main/default/objects/RTL_Referral__c/fields/RTL_First_Contacted_Date2__c.field-meta.xml
<CustomField>
    <fullName>RTL_First_Contacted_Date2__c</fullName>
    <description>First Contacted Date to be used in Aging Calculation exclude weekend</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Contacted Date</label>
    <type>Date</type>
</CustomField>