force-app/main/default/objects/RTL_Referral__c/fields/RTL_First_Contacted_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_First_Contacted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Contacted Date/Time</label>
    <type>DateTime</type>
</CustomField>