force-app/main/default/objects/RTL_Referral__c/fields/RTL_First_Contacted_Region__c.field-meta.xml
<CustomField>
    <fullName>RTL_First_Contacted_Region__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Contacted Region / Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>